# rusty-gbc

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: main.yml
docs/: gbc_wasm.js  gbc_wasm.wasm  index.html
gbc_sdl2/: Cargo.toml
gbc_sdl2/src/: display.rs  main.rs
gbc_wasm/: Cargo.toml
gbc_wasm/src/: canvas.rs  main.rs
gbc_wasm/static/: index.html
rusty_gbc/: Cargo.toml
rusty_gbc/src/: lib.rs
rusty_gbc/src/gbc/: boot.rs  gpu.rs  input.rs  mmu.rs  mod.rs  registers.rs  timer.rs
rusty_gbc/src/gbc/memory/: mbc.rs  mod.rs  ram.rs
rusty_gbc/src/gbc/memory/mbc/: mbc1.rs  mbc3.rs  mbc5.rs  mod.rs
src/: debugger.rs  display.rs  main.rs
src/gbc/: boot.rs  gpu.rs  input.rs  mmu.rs  mod.rs  registers.rs  timer.rs
src/gbc/gpu/: gpu.rs  mod.rs
src/gbc/memory/: mbc.rs  mod.rs  registers.rs  rom.rs
