[package]
name = "rusty_gbc"
version = "0.1.0"
authors = ["Cory Lanza <corylanza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
hex = "0.4.2"
text_io = "0.1.8"
rand = "0.5"